test/compile-fail/break.he
fn main
{
    break //~ ERROR 3010
    ret 0;
}
